[metadata]
author = Brandon Moller
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Home Automation
description = A package to interact with BMW ConnectedDrive
keywords =
    api
    automation
    bmw
    data
license = MPL 2.0
long_description = file: README.rst
name = iota-cd
platforms = any
python_requires = >=3
url = https://github.com/bmoller/iota-cd
version = 1.0.0

[options]
packages = find:
